--- a/model_processing/.gitignore
+++ b/model_processing/.gitignore
@@ -1,3 +1,7 @@
+input/*.ply
+output/*.ply
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,venv
 
