--- a/model_processing/.vscode/settings.json
+++ b/model_processing/.vscode/settings.json
@@ -3,5 +3,6 @@
     "editor.defaultFormatter": "ms-python.black-formatter",
     "editor.formatOnSave": true
   },
-  "python.formatting.provider": "none"
+  "python.formatting.provider": "none",
+  "cSpell.words": ["linalg", "nditer"]
 }
