improve performance of metrics - add gpu processing - change algorithms

--- a/model_processing/.vscode/settings.json
+++ b/model_processing/.vscode/settings.json
@@ -4,5 +4,5 @@
     "editor.formatOnSave": true
   },
   "python.formatting.provider": "none",
-  "cSpell.words": ["linalg", "nditer"]
+  "cSpell.words": ["linalg", "nditer", "numba"]
 }
