--- a/model_processing/requirements.txt
+++ b/model_processing/requirements.txt
@@ -21,12 +21,15 @@ jsonschema==4.17.3
 jupyter_core==5.3.1
 kiwisolver==1.4.4
 lazy-object-proxy==1.9.0
+llvmlite==0.40.1
 MarkupSafe==2.1.3
 matplotlib==3.7.1
 mccabe==0.7.0
 nbformat==5.7.0
-numpy==1.25.0
+numba==0.57.1
+numpy==1.24.4
 open3d==0.17.0
+opencv-python==4.8.0.74
 packaging==23.1
 pandas==2.0.2
 Pillow==9.5.0
@@ -39,6 +42,8 @@ pyrsistent==0.19.3
 python-dateutil==2.8.2
 pytz==2023.3
 PyYAML==6.0
+ruamel.yaml==0.17.32
+ruamel.yaml.clib==0.2.7
 scikit-learn==1.2.2
 scipy==1.10.1
 six==1.16.0
